#                                                                              #
#                ===== PLEASE DO NOT DELETE THIS HEADER ====                   #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789

DG-2011-03-17-1: Enhancem.:   qstat shows now core binding related information
                              per default
                 Issue:       GE-3371
					  Review:      JG (GE-15)

DG-2011-03-17-0: Enhancem.:   qhost shows now host topology per default
                 Issue:       GE-3370
					  Review:      JG (GE-14)

JG-2011-03-16-1: Enhancem.:   unify linux arch strings ...
                              Some additional code pieces found during review.
                 Belongs to:  JG-2011-03-16-0

JG-2011-03-16-0: Enhancem.:   unify linux arch strings (lx24-* and lx26-*)
                              to lx-*
                 Issue:       GE-3362
                 Review:      EB

EB-2011-03-16-0: Bugfix:      JSV changed default of boolean
                              changed help output of qsub
                 Issue:       GE-3311, GE-3323
                 Review:      JG

JG-2011-03-15-0: Enhancem.:   Updated version and branding of man pages.
                 Issue:       TS-355
                 Review:      DG

JG-2011-03-14-0: Enhancem.:   Instrumentation for testing issue GE-3306: Delay
                              scheduling run via environment variable
                              SGE_TEST_DELAY_SCHEDULING.
                 Review:      HP

DG-2011-03-11-0: Cleanup:     fixed issues from review
                 Belongs to:  DG-2011-03-09-0

DG-2011-03-09-1: Cleanup:     fixed upgrade module
                 Belongs to:  DG-2011-03-09-0

DG-2011-03-09-0: Enhancem.:   Added new complex m_thread.
                 Issue:       GE-3381